--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Lato&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Geist&display=swap);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css);
 
 @tailwind base;
@@ -9,10 +9,10 @@
 * {
     outline: none;
     text-decoration: none;
+    font-family: Geist;
 }
 body {
     background-color: #131313;
-    font-family: Lato;
     color: #fdfdfe;
 }
 
